# DragonTearHoardManager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml  nms-package.yml  steamdeck_build.yml
core/: CMakeLists.txt  DragonLogger.hpp  TearEngine.hpp
games/cyberpunk-2077/: CMakeLists.txt
games/cyberpunk-2077/lua/: init.lua
games/cyberpunk-2077/redscript/: DTHM_InventoryWatcher.reds
games/cyberpunk-2077/src/: plugin.cpp
games/nms/: CMakeLists.txt  item_mapping.json
games/nms-cpp/: CMakeLists.txt
games/nms-cpp/src/: ConfigLoader.cpp  ConfigLoader.hpp  InventoryParser.cpp  InventoryParser.hpp  SaveManager.cpp  SaveManager.hpp  SaveWatcher.cpp  SaveWatcher.hpp  WebServer.cpp  WebServer.hpp  main.cpp
src/core/: TearEngine.hpp
src/nms/: item_mapping.json
tests/: test_logic.cpp  test_real_saves.cpp
tests/data/: mock_endgame_save.json
tests/data/nms_saves/: save.hg  save10.hg  save11.hg  save12.hg  save2.hg  save3.hg  save4.hg  save5.hg  save6.hg  save7.hg  save8.hg  save9.hg
tools/: deck_deploy.sh
